--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@chakra-ui/next-js": "^2.4.2",
     "@chakra-ui/progress": "^2.2.0",
+    "@chakra-ui/react": "^3.0.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@phosphor-icons/react": "^2.1.7",
     "@phosphor-icons/web": "^2.1.1",
