--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@phosphor-icons/react": "^2.1.7",
         "@phosphor-icons/web": "^2.1.1",
         "framer-motion": "^11.11.9",
+        "microsoft-cognitiveservices-speech-sdk": "^1.41.0",
         "next": "14.2.15",
         "next-google-fonts": "^2.2.0",
         "react": "^18",
