--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
         "@emotion/styled": "^11.13.0",
         "@phosphor-icons/react": "^2.1.7",
         "@phosphor-icons/web": "^2.1.1",
+        "@uppy/core": "^4.2.2",
+        "@uppy/dashboard": "^4.1.1",
+        "@uppy/drag-drop": "^4.0.3",
+        "@uppy/file-input": "^4.0.2",
+        "@uppy/progress-bar": "^4.0.0",
+        "@uppy/react": "^4.0.2",
+        "@uppy/xhr-upload": "^4.2.1",
         "framer-motion": "^11.11.9",
         "next": "14.2.15",
         "next-google-fonts": "^2.2.0",
