--- a/package.json
+++ b/package.json
@@ -16,21 +16,24 @@
         "@emotion/styled": "^11.13.0",
         "@phosphor-icons/react": "^2.1.7",
         "@phosphor-icons/web": "^2.1.1",
-        "@uppy/core": "^4.2.2",
+        "@supabase/supabase-js": "^2.46.1",
+        "@uppy/core": "^4.2.3",
         "@uppy/dashboard": "^4.1.1",
         "@uppy/drag-drop": "^4.0.3",
         "@uppy/file-input": "^4.0.2",
         "@uppy/progress-bar": "^4.0.0",
-        "@uppy/react": "^4.0.2",
+        "@uppy/react": "^4.0.3",
+        "@uppy/transloadit": "^4.1.3",
         "@uppy/xhr-upload": "^4.2.1",
         "framer-motion": "^11.11.9",
         "microsoft-cognitiveservices-speech-sdk": "^1.41.0",
+        "nanoid": "^5.0.8",
         "next": "14.2.15",
         "next-google-fonts": "^2.2.0",
         "react": "^18",
         "react-dom": "^18",
-        "react-joyride": "^2.9.2"
+        "react-joyride": "^2.9.2",
+        "uuid": "^11.0.2",
+        "ws": "^8.18.0"
     }
 }
-
-
