--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "nanoid": "^5.0.8",
         "next": "14.2.15",
         "next-google-fonts": "^2.2.0",
+        "pdf-parse": "^1.1.1",
         "react": "^18",
         "react-dom": "^18",
         "react-joyride": "^2.9.2",
