--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@uppy/react": "^4.0.3",
     "@uppy/status-bar": "^4.0.4",
     "@uppy/transloadit": "^4.1.3",
-    "@uppy/xhr-upload": "^4.2.1",
+    "@uppy/xhr-upload": "^4.2.2",
     "framer-motion": "^11.11.9",
     "microsoft-cognitiveservices-speech-sdk": "^1.41.0",
     "nanoid": "^5.0.8",
@@ -35,6 +35,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-joyride": "^2.9.2",
+    "uppy": "^4.7.0",
     "uuid": "^11.0.2",
     "ws": "^8.18.0"
   }
