--- a/.gitignore
+++ b/.gitignore
@@ -59,10 +59,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.test
-.env.local
-.env.sandbox
+.env*
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
