--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
 
     "framer-motion": "^11.11.9",
 
+    "lottie-react": "^2.4.0",
+
     "microsoft-cognitiveservices-speech-sdk": "^1.41.0",
 
     "nanoid": "^5.0.8",
