--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
 
     "lottie-react": "^2.4.0",
 
+    "lottie-web": "^5.12.2",
+
     "microsoft-cognitiveservices-speech-sdk": "^1.41.0",
 
     "nanoid": "^5.0.8",
