--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 
     "@chakra-ui/react": "^2.10.3",
 
+    "@deepgram/sdk": "^3.9.0",
+
     "@emotion/react": "^11.13.3",
 
     "@emotion/styled": "^11.13.0",
@@ -51,6 +53,8 @@
     "@uppy/transloadit": "^4.1.3",
 
     "@uppy/xhr-upload": "^4.2.1",
+
+    "dotenv": "^16.4.5",
 
     "framer-motion": "^11.11.9",
 
